# dbml-to-fides

./: .gitignore  LICENSE.txt  README.md  cli.py  pyproject.toml  sample.dbml  tox.ini
.fides/: sample_dataset.yml
.github/workflows/: release.yml
dbml_to_fides/: cli.py  transform.py
tests/: test_transforms.py
tests/data/: fides_db_dataset.yml  fides_redis_dataset.yml  sample_dataset.yml  schema_def.dbml  schema_def_dataset_min.yml
